@@ -41,6 +41,9 @@
  *    $Locker$ (who has reserved checkout)
  *  Log:
  *    $Log$
+ *    Revision 1.37  2006/11/03 23:48:29  bfo
+ *    Copy only used aX/dX registers for int commands
+ *
  *    Revision 1.36  2006/11/01 11:42:08  bfo
  *    Copyback of <os9regs> for int commands no longer needed
  *    (because <os9regs> reference directly copies them to the right place)
@@ -410,7 +413,7 @@ void os9_to_xxx( ushort pid )
 
         mid=     cp->mid;    
         mod= os9mod( mid );
-    if (mid==0 || mod==NULL) mn= cp->procName;
+    if (mid==0 || mod==NULL) mn= &cp->intProcName;
     else                     mn= Mod_Name( mod );
 
     /* question: must it be logged ? */
@@ -592,8 +595,8 @@ void debug_return( ushort pid, regs_type* crp, Boolean cwti )
       /* otherwise, d1.w will be updated when suspended process gets active again */
           strt= (ustrcmp(fdeP->name,"START")==0);
       if (strt) {
-        if  (cp->isIntUtil) {
-          p= cp->procName;
+        if   (cp->isIntUtil) {
+          p= &cp->intProcName;
         }
         else {
           mod= (mod_exec *)cp->os9regs.a[3];
